build logs: add follow option
What was done:
* make changes to the open api schema
* refactor the logs endpoint to stream logs
  and `follow` option is set.
* get tests to pass

Bug: T339922
